api: fix bugs in group invite and membership api
fixes #10268

group invite wasn't searching in the correct account when trying to match user
emails passed in to users.  group membership creation was broken for
non-community account level groups to to a missing permission.

test plan:
- create an account level group
- invite someone who belongs to that account to the group with the api
- they should be added (it should not create a temporary user)
- now add someone else directly with the api be creating a membership for them
- it should work

Change-Id: I7bb7a22b83e13ed6e9575aa059e3e3463e0541f9
Reviewed-on: https://gerrit.instructure.com/13337
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Brian Palmer <brianp@instructure.com>

--- a/app/views/groups/context_groups.html.erb
+++ b/app/views/groups/context_groups.html.erb
@@ -3,7 +3,7 @@
 <% content_for :right_side do %>
   <div class="rs-margin-lr rs-margin-top">
     <% if @context.allow_student_organized_groups %>
-      <% if can_do(@context, @current_user, :participate_in_groups) %>
+      <% if can_do(@context.groups.new, @current_user, :create) %>
         <a href="#" class="button button-sidebar-wide add_group_link"><%= image_tag "add.png" %> <%= t 'actions.add', 'Start a New Group' %></a>
       <% end %>
     <% else %>
