--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -7,6 +7,7 @@
   right: 0
 
 #right-side
+  position: relative
   width: $right_side_width - ($right_side_margin * 2)
   color: $right_side_text_color
   min-height: 20px
