--- a/app/views/jst/DiscussionTopics/EditView.handlebars
+++ b/app/views/jst/DiscussionTopics/EditView.handlebars
@@ -39,6 +39,7 @@
     <div class="controls">
       {{#unless isAnnouncement}}
         <label class="checkbox">
+          <input name="threaded" type="hidden" value="0" />
           <input type="checkbox"
                  {{#ifEqual discussion_type "threaded"}}checked{{/ifEqual}}
                  name="threaded">
@@ -46,6 +47,7 @@
         </label>
       {{/unless}}
       <label class="checkbox">
+        <input name="delay_posting" type="hidden" value="0" />
         <input type="checkbox"
                {{#if delayed_post_at}}checked{{/if}}
                name="delay_posting"
@@ -69,6 +71,7 @@
       </label>
 
       <label class="checkbox">
+        <input name="podcast_enabled" type="hidden" value="0" />
         <input type="checkbox"
                {{#if podcast_url}}checked{{/if}}
                name="podcast_enabled"
@@ -85,6 +88,7 @@
       </label>
       {{#if showAssignment}}
         <label class="checkbox">
+          <input name="assignment[set_assignment]" type="hidden" value="0" />
           <input type="checkbox"
                  id="use_for_grading"
                  class="element_toggler"
