--- a/app/views/courses/settings.html.erb
+++ b/app/views/courses/settings.html.erb
@@ -550,7 +550,7 @@ Hashtags should consist of letters, numbers, dashes and underscores (no spaces).
             <%= f.blabel :root_account_id, :en => "Root Account" %>
           </td>
           <td>
-            <%= f.select :root_account_id, Account.root_accounts.sort_by(&:name).map{|a| [a.name, a.id] }, :selected => @context.root_account_id %>
+            <%= f.select :root_account_id, Account.root_accounts.active.sort_by(&:name).map{|a| [a.name, a.id] }, :selected => @context.root_account_id %>
           </td>
         </tr>
         <tr>
