fix page error when disabling showing quiz results, fixes #10237
test plan:
 * create a quiz, disable "let students see their quiz responses"
 * as a student, take the quiz
 * when finishing the quiz, you should not get a page error,
   and should only see your score on the quiz page, not the quiz.

Change-Id: I11e835300c7631e65503eb7aeae23508f1fa4830
Reviewed-on: https://gerrit.instructure.com/13354
Reviewed-by: Brian Palmer <brianp@instructure.com>
Tested-by: Zach Wily <zach@instructure.com>

--- a/app/views/quizzes/_quiz_submission.html.erb
+++ b/app/views/quizzes/_quiz_submission.html.erb
@@ -22,7 +22,7 @@
     <%= t(:score_out_of_points_possible, "%{score} out of %{points_possible}",
               :score => raw("<span class=\"score_value\">#{@submission.score}</span>"),
               :points_possible => params[:preview] ? @submission.points_possible_at_submission_time : @quiz.points_possible) %>
-    <% if submission_score.pending_review? %>
+    <% if (@current_submission || @submission).try(:pending_review?) %>
       *
       <div>
         <% if can_do(@quiz, @current_user, :grade) %>
