make sure not to show any "correct" arrows on surveys; refs #10154
A previous commit got rid of all the right/wrong arrows, but we were still
showing things like "Correct Answers" for fill-in-the-blank questions, for the
answers wrapper. This hides all the correct answer markers for survey
responses (and when editing).

test plan:
 * create a quiz, make it one of the survey types
 * create a question of each type
 * preview the quiz and submit it
 * verify that you don't see any "Correct Answers" arrows
 * also re-test normal quiz functionality

Change-Id: Ib774943856feef25b55c772ab1c0290518a4f74c
Reviewed-on: https://gerrit.instructure.com/13359
Reviewed-by: Mark Ericksen <marke@instructure.com>
Tested-by: Zach Wily <zach@instructure.com>

--- a/app/views/quizzes/_display_answer.html.erb
+++ b/app/views/quizzes/_display_answer.html.erb
@@ -6,7 +6,7 @@
   user_answer ||= nil
   matched_answer ||= nil
   show_correct_answers = @quiz.try_rescue(:show_correct_answers) || (!assessment_results && !user_answer)#rescue false
-  show_correct_answers = false if @quiz.try_rescue(:quiz_type) == 'survey' || @quiz.try_rescue(:quiz_type) == 'graded_survey'
+  show_correct_answers = false if @quiz.try(:survey?)
   selected_answer = user_answer && answer && hash_get(user_answer, :answer_id) == hash_get(answer, :id)
   selected_answer = true if user_answer && question_type.answer_type == "matching_answer"
   selected_answer = (hash_get(user_answer, "answer_#{answer[:id]}")  == "1") if user_answer && hash_get(question, :question_type) == "multiple_answers_question"
