--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -308,7 +308,7 @@ $(document).ready(function() {
   </span>
   <% end %>
 </div>
-</div>
+</header>
 <div id="questions" class="question_editing brief show_correct_answers">
   <% @quiz.root_entries.each do |question| %>
     <% if question[:entry_type] == "quiz_group" %>
@@ -325,7 +325,7 @@ $(document).ready(function() {
 <%= render :partial => "quizzes/form_question", :object => nil %>
 <%= render :partial => "quizzes/question_group", :object => nil %>
 <%= render :partial => "quizzes/find_question_from_bank" %>
-<div style="text-align: center;" class="add_question question_editing">
+<div style="text-align: center; margin: -1px 1px 1px" class="add_question question_editing">
   <a href="#" class="add_question_link add"><%= t('links.new_question', "New Question") %></a>
   <a href="#" class="add_question_group_link add" style="margin-left: 20px; margin-right: 20px;"><%= t('links.new_question_group', "New Question Group") %></a>
   <% if feature_enabled?(:question_banks) %>
