--- a/app/views/jst/DiscussionTopics/EditView.handlebars
+++ b/app/views/jst/DiscussionTopics/EditView.handlebars
@@ -8,8 +8,11 @@
            style="font-size: 15px; width: 99%">
   </div>
   <div class="control-group">
-    <textarea name="message"
-              style="width: 100%; min-height: 200px">{{message}}</textarea>
+      <div style="float: right;">
+        <a href="#" class="rte_switch_views_link">{{#t "#editor.switch_views"}}Switch Views{{/t}}</a>
+      </div>
+      <textarea name="message"
+              style="width: 100%; min-height: 200px">{{convertApiUserContent message forEditing=1}}</textarea>
   </div>
 
 </fieldset>
