--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -977,7 +977,7 @@ ul#quiz_versions
 // styles for teacher comments on quiz answers (comment bubbles).
 @mixin comment-arrow
   border: 10px solid transparent
-  content: ' '
+  content: " "
   height: 0
   position: absolute
   width: 0
@@ -985,6 +985,7 @@ ul#quiz_versions
 .quiz_comment
   +vertical-gradient(#fff, #f4f5f6)
   border: 1px solid #b5bfc7
+  filter: none
   +border-radius(5px)
   +box-shadow(0 1px 2px rgba(#000, 0.2))
   font-size: 14px
@@ -1015,18 +1016,27 @@ ul#quiz_versions
     left: 30px
     top: -19px
 
+// use a solid color instead of a gradient in IE, because IE's gradient
+// filter causes the box to hide overflow (including the box's comment
+// arrow.
+.ie .quiz_comment
+  background: #f4f5f6
+  filter: none
+
+  &:after
+    border-bottom-color: #f4f5f6
+
 .answer_comment_holder
-  :-moz-border-radius 5px
-  :border-radius 5px
-  :border 1px solid #faa
-  :margin-left 20px
-  :padding 5px
-  :margin-top 5px
-  :font-size 0.8em
-  :position relative
-  :float left
-  :width auto
-  :min-width 50px
+  border-radius: 5px
+  border: 1px solid #faa
+  margin-left: 20px
+  padding: 5px
+  margin-top: 5px
+  font-size: 0.8em
+  position: relative
+  float: left
+  width: auto
+  min-width: 50px
   +vertical-gradient(#ffeae7, #fdd7d7)
 
   .answer_comment
