fix a couple regressions in quiz/discussion changes
1. fixes editing question banks
2. fixes issue with convertApiUserContent

test plan:
1. edit a question bank, you should not get a page error
2. load a discussion w/ enhanced user content (e.g. videos), you should
   not get javascript errors

Change-Id: I8aa464dcc0f479f9383fc7923c3803cfc0bf8a04
Reviewed-on: https://gerrit.instructure.com/13387
Reviewed-by: Zach Wily <zach@instructure.com>
Tested-by: Bryan Madsen <bryan@instructure.com>

--- a/app/views/quizzes/_display_question.html.erb
+++ b/app/views/quizzes/_display_question.html.erb
@@ -10,7 +10,7 @@
   editing ||= false
   in_group ||= false
   question_bank_id ||= nil
-  display_correct_answers = @quiz.display_correct_answers?(@current_user, @submission)
+  display_correct_answers = @quiz && @quiz.display_correct_answers?(@current_user, @submission)
   correct = user_answer && hash_get(user_answer, :correct) == true
   incorrect = user_answer && hash_get(user_answer, :correct) == false
   unanswered = (%w{multiple_choice_question true_false_question}.include?(hash_get(question, 'question_type')) && incorrect && hash_get(user_answer, 'text').blank?) ||
