--- a/app/views/quizzes/_display_answer.html.erb
+++ b/app/views/quizzes/_display_answer.html.erb
@@ -7,7 +7,7 @@
   matched_answer ||= nil
   # Determine if we should show the correct answers. Start with the quiz setting but enable if the user can grade but not on surveys.
   # Also show if not on results page and no answers (i.e. when teacher editing quiz)
-  show_correct_answers = @quiz.display_correct_answers?(@current_user, @submission) || (!assessment_results && !user_answer)
+  show_correct_answers = @quiz && @quiz.display_correct_answers?(@current_user, @submission) || (!assessment_results && !user_answer)
   show_correct_answers = false if @quiz.try(:survey?)
   selected_answer = user_answer && answer && hash_get(user_answer, :answer_id) == hash_get(answer, :id)
   selected_answer = true if user_answer && question_type.answer_type == "matching_answer"
