change link and notifications blue text color, fixes #10267
The blue link text and notification page text is currently difficult to
read for some users because of the low contrast with other colors.

test-plan:
* verify link text on the discussions and dashboard are readable.
* verify blue text on the notifications page is still readable

Change-Id: I1ff16ef23d0c8cb67fc89072948d1789f273a96c
Reviewed-on: https://gerrit.instructure.com/13399
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/notification_preferences.sass
+++ b/app/stylesheets/notification_preferences.sass
@@ -3,7 +3,7 @@
 
 $grey: #888
 $darker_grey: darken($grey, 9%)
-$category_name: #08C    //#668
+$category_name: #396eb2    //#668
 $stripe_color: #eff3f4
 $hover_row: #F5F5F5
 
