limit topic options, depending on type/context/perms, fixes #10259
bring the functionality back in line with the old UI, i.e.

* ensure that group-level topics only have the threaded replies option,
  and possibly the podcast feed (if the user has moderate rights)
* ensure that group-level announcements have no options
* ensure that course-level announcements only have the delay posting and
  replies-not-visible-till-user-posts options

test plan:
1. as an teacher/admin,
   1. go to create a course-level topic. confirm all options are present
   2. go to create a course-level announcements. confirm you can have the
      options outlined above (3rd item)
   3. go to create a group-level topic. confirm that you can make it
      threaded and a podcast feed (1st item)
   4. go to create a group-level announcement. confirm that there are no
      options (2nd item)
2. as a student who can create topics in a course,
   1. go to create a course-level topic. confirm that only the threading,
      delayed posting, and user-reply settings are present
   2. go to create a group-level topic. confirm that you can make it
      threaded (1st item)
   3. go to create a group-level announcement. confirm that there are no
      options (2nd item)

Change-Id: Ifa1423181b226bd9ef982db514533c471d66ac1f
Reviewed-on: https://gerrit.instructure.com/13400
Reviewed-by: Zach Wily <zach@instructure.com>
Tested-by: Zach Wily <zach@instructure.com>

--- a/app/views/jst/DiscussionTopics/EditView.handlebars
+++ b/app/views/jst/DiscussionTopics/EditView.handlebars
@@ -40,10 +40,11 @@
 {{/if}}
 <fieldset>
 
+  {{#ifAny isTopic contextIsCourse canModerate showAssignment}}
   <div class="control-group">
-    <label class="control-label">Options</label>
+    <label class="control-label">{{#t "options"}}Options{{/t}}</label>
     <div class="controls">
-      {{#unless isAnnouncement}}
+      {{#if isTopic}}
         <label class="checkbox">
           <input name="threaded" type="hidden" value="0" />
           <input type="checkbox"
@@ -51,47 +52,50 @@
                  name="threaded">
           {{#t "allow_threaded_replies"}}Allow threaded replies{{/t}}
         </label>
-      {{/unless}}
-      <label class="checkbox">
-        <input name="delay_posting" type="hidden" value="0" />
-        <input type="checkbox"
-               {{#if delayed_post_at}}checked{{/if}}
-               name="delay_posting"
-               class="element_toggler"
-               aria-controls="discussion_topic_delay_post_container">
-        {{#t "delay_posting"}}Delay posting{{/t}}
-      </label>
-      <label id="discussion_topic_delay_post_container"
-             {{#unless delayed_post_at}}style="display: none;"{{/unless}}
-             class="checkbox">
-        {{#t "post_at"}}Post At{{/t}}
-        <input type="text"
-               class="datetime_field input-medium"
-               name="delayed_post_at"
-               {{! TODO: what would be the best way to get this formatted right? }}
-               value="{{datetimeFormatted delayed_post_at}}">
-      </label>
-      <label class="checkbox">
-        {{checkbox "require_initial_post"}}
-        {{#t "users_must_post_before_seeing_replies"}}Users must post before seeing replies{{/t}}
-      </label>
-
-      <label class="checkbox">
-        <input name="podcast_enabled" type="hidden" value="0" />
-        <input type="checkbox"
-               {{#if podcast_url}}checked{{/if}}
-               name="podcast_enabled"
-               class="element_toggler"
-               aria-controls="podcast_has_student_posts_container">
-        {{#t "enable_podcast_feed"}}Enable podcast feed{{/t}}
-      </label>
-
-      <label id="podcast_has_student_posts_container"
-             {{#unless podcast_url}}style="display: none"{{/unless}}
-             class="checkbox">
-        {{checkbox "podcast_has_student_posts"}}
-        {{#t "include_replies_in_podcast_feed"}}Include Replies in podcast feed{{/t}}
-      </label>
+      {{/if}}
+      {{#if contextIsCourse}}
+        <label class="checkbox">
+          <input name="delay_posting" type="hidden" value="0" />
+          <input type="checkbox"
+                 {{#if delayed_post_at}}checked{{/if}}
+                 name="delay_posting"
+                 class="element_toggler"
+                 aria-controls="discussion_topic_delay_post_container">
+          {{#t "delay_posting"}}Delay posting{{/t}}
+        </label>
+        <label id="discussion_topic_delay_post_container"
+               {{#unless delayed_post_at}}style="display: none;"{{/unless}}
+               class="checkbox">
+          {{#t "post_at"}}Post At{{/t}}
+          <input type="text"
+                 class="datetime_field input-medium"
+                 name="delayed_post_at"
+                 {{! TODO: what would be the best way to get this formatted right? }}
+                 value="{{datetimeFormatted delayed_post_at}}">
+        </label>
+        <label class="checkbox">
+          {{checkbox "require_initial_post"}}
+          {{#t "users_must_post_before_seeing_replies"}}Users must post before seeing replies{{/t}}
+        </label>
+      {{/if}}
+      {{#if canModerate}}
+        <label class="checkbox">
+          <input name="podcast_enabled" type="hidden" value="0" />
+          <input type="checkbox"
+                 {{#if podcast_url}}checked{{/if}}
+                 name="podcast_enabled"
+                 class="element_toggler"
+                 aria-controls="podcast_has_student_posts_container">
+          {{#t "enable_podcast_feed"}}Enable podcast feed{{/t}}
+        </label>
+  
+        <label id="podcast_has_student_posts_container"
+               {{#unless podcast_url}}style="display: none"{{/unless}}
+               class="checkbox">
+          {{checkbox "podcast_has_student_posts"}}
+          {{#t "include_replies_in_podcast_feed"}}Include Replies in podcast feed{{/t}}
+        </label>
+      {{/if}}
       {{#if showAssignment}}
         <label class="checkbox">
           <input name="assignment[set_assignment]" type="hidden" value="0" />
@@ -107,6 +111,7 @@
       {{/if}}
     </div>
   </div>
+  {{/ifAny}}
 
 </fieldset>
 
