--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -4,6 +4,9 @@ $backgroundColor: #dfe9f0
 $borderColor: #AAA
 $questionHeaderBackground: #F5F5F5
 
+#wrapper-container
+  overflow: visible
+
 div#content
   overflow: visible
   padding: 0
