clear float for Switch Views link
fixes 10321

test plan:
  1. login and navigate to discussions
  2. click on the button to create a new one
  3. notice the Switch Views link above the text
     editor is not being overlapped by the text editor
  4. do the same for an announcement

Change-Id: I7af22f5b4a787d0a1e6b8cd2bdf4a4901c82d56d
Reviewed-on: https://gerrit.instructure.com/13406
Tested-by: Zach Wily <zach@instructure.com>
Reviewed-by: Zach Wily <zach@instructure.com>

--- a/app/views/jst/DiscussionTopics/EditView.handlebars
+++ b/app/views/jst/DiscussionTopics/EditView.handlebars
@@ -11,8 +11,9 @@
       <div style="float: right;">
         <a href="#" class="rte_switch_views_link">{{#t "#editor.switch_views"}}Switch Views{{/t}}</a>
       </div>
+      <div style="clear:both;"></div>
       <textarea name="message"
-              style="width: 100%; min-height: 200px">{{convertApiUserContent message forEditing=1}}</textarea>
+              style="width: 100%; min-height: 200px;">{{convertApiUserContent message forEditing=1}}</textarea>
   </div>
 
 </fieldset>
