--- a/app/views/jst/DiscussionTopics/SummaryView.handlebars
+++ b/app/views/jst/DiscussionTopics/SummaryView.handlebars
@@ -5,6 +5,8 @@
           data-tooltip
           title="{{#t "drag_up_or_down_to_reorder"}}Drag up or down to reorder{{/t}}"></span>
   </div>
+{{/if}}
+{{#if permissions.delete}}
   <label class="discussion-column">
     <input class="toggleSelected" type="checkbox" {{#if selected}}checked{{/if}} >
   </label>
