enlarge input boxes to fit answers on quiz show pages.
fixes #10345

text boxes on quiz display pages (e.g. results and history
pages) now have a min-width of 120px, a max-width of 100% of
of the answer, and will grow to fit the given answer within
those limits.

test plan:
  * create a quiz with a fill in the blank question;
  * take the quiz, and fill in the question's text field with
    an answer longer than the visible field;
  * finish the quiz and verify that the input has now grown to
    fit your answer.

Change-Id: I221743a98daf33a0671823fe7c32501ef67716d8
Reviewed-on: https://gerrit.instructure.com/13427
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/stylesheets/quizzes.sass
+++ b/app/stylesheets/quizzes.sass
@@ -487,6 +487,9 @@ div#content
   .answer
     .answer_select .select_answer_link
       :display none
+  input[type=text]
+    max-width: 100%
+    min-width: 120px
 .question.selectable
   .answer
     .answer_select .select_answer
