--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
     </div>
     <%= render(:partial => "shared/keyboard_navigation_hint") if keyboard_navigation %>
     <% if @current_user %>
-    <ul role="navigation" id="menu">
+    <ul role="navigation" id="menu" aria-label="main">
       <%- cache([@current_user, 'home-menu-15m'], :expires_in => 15.minutes) do -%>
       <li id="courses_menu_item" class="menu-item">
         <%- if show_home_menu? -%>
@@ -150,7 +150,7 @@
     <% end %>
     <div id="main">
       <div id="right-side-wrapper">
-        <aside id="right-side" role="complementary">
+        <aside id="right-side" role="complementary" aria-label="sidebar">
           <%= right_side %>
         </aside>
       </div>
