clarify button descriptions on manage discussion topic links.
fixes #9193

previously, the "gear" links on the discussion page read "manage."
they now read, "manage discussion," and "manage discussion entry"
respectively.

test plan:
  * using voiceover or another screen reader, navigate to
    the discussions page and tab to the gear link at the top
    of the discussion and at the top of a response;
  * verify that the screen reader reads, "manage discussion" and
    "manage discussion entry" on the appropriate links.

Change-Id: Ie2de22f09c86340c2cdc551fa32b72ee53beaafa
Reviewed-on: https://gerrit.instructure.com/13443
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Mark Ericksen <marke@instructure.com>

--- a/app/views/discussion_topics/show.html.erb
+++ b/app/views/discussion_topics/show.html.erb
@@ -62,7 +62,7 @@
         <div class="discussion-header-content right-of-avatar">
           <% if can_do(@topic, @current_user, :update) || can_do(@topic, @current_user, :delete) %>
             <div class="admin-links">
-              <button class="al-trigger ui-button" data-kyle-menu-options='{"appendMenuTo": "body"}'><span class="al-trigger-inner"><%= t :manage, 'Manage' %></span></button>
+              <button class="al-trigger ui-button" data-kyle-menu-options='{"appendMenuTo": "body"}'><span class="al-trigger-inner"><%= t :manage_discussion, 'Manage Discussion' %></span></button>
               <ul class="al-options">
                 <% if can_do(@topic, @current_user, :update) %>
                   <li><a href="<%= context_url(@topic.context, :edit_context_discussion_topic_url, @topic) %>"><span class="ui-icon ui-icon-pencil"></span><%= t :edit, 'Edit' %></a></li>
