--- a/app/views/jst/discussions/_entry_content.handlebars
+++ b/app/views/jst/discussions/_entry_content.handlebars
@@ -10,7 +10,7 @@
   {{>avatar author}}
   <div class="discussion-header-content right-of-avatar">
     <div class="hide-if-collapsed admin-links">
-      <button class="al-trigger ui-button" data-event="openMenu"><span class="al-trigger-inner">{{#t "manage"}}Manage{{/t}}</span></button>
+      <button class="al-trigger ui-button" data-event="openMenu"><span class="al-trigger-inner">{{#t "manage_discussion_entry"}}Manage Discussion Entry{{/t}}</span></button>
       <ul class="al-options">
         <li><a href="#{{#if parent_cid}}{{parent_cid}}{{else}}content{{/if}}"><span class="ui-icon ui-icon-arrowreturnthick-1-w" />{{#t "go_to_parent"}}Go To Parent{{/t}}</a></li>
         {{#if canModerate}}
