add labels to discussion, announcement inputs. fixes #10374
new inputs on discussion and announcement pages were using
placeholder attributes in place of labels, which was making them
unreadable by some screen readers.

this commit adds labels to each of these inputs. it also focuses the
new/edit form when creating a new discussion or announcement.

test plan:
  * using voiceover or another screen reader, navigate to the
    course discussion page;
  * verify that the search input's label is spoken when navigated
    to;
  * click the "start a discussion" button and verify that the title
    input is spoken and focused on page load.

Change-Id: I7bb9fd950d8d6c234b6b82eba98b059e8355e69d
Reviewed-on: https://gerrit.instructure.com/13453
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Cameron Matheson <cameron@instructure.com>

--- a/app/views/jst/DiscussionTopics/IndexView.handlebars
+++ b/app/views/jst/DiscussionTopics/IndexView.handlebars
@@ -21,6 +21,7 @@
       {{/if}}
     </div>
     <div class="headerBar-left bootstrap-form form-inline index_view_filter_form">
+      <label class="hidden-inline-text" for="searchTerm">{{#t "search_title_body_or_author"}}Search title, body, or author{{/t}}</label>
       <input id="searchTerm"
              placeholder="{{#t "search_title_body_or_author"}}Search title, body, or author{{/t}}"
              value="{{searchTerm}}"
