--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1546,3 +1546,16 @@ form.user_content_post_form
     padding: 15px
     opacity: 0.90
     color: black
+
+.hidden-text
+  overflow: hidden
+  text-indent: 100%
+  white-space: nowrap
+
+.hidden-inline-text
+  display: inline-block
+  height: 0
+  overflow: hidden
+  text-indent: 100%
+  white-space: nowrap
+  width: 0
