--- a/app/views/jst/DiscussionTopics/EditView.handlebars
+++ b/app/views/jst/DiscussionTopics/EditView.handlebars
@@ -1,6 +1,8 @@
 <fieldset>
   <div class="control-group">
+    <label class="hidden-inline-text" for="discussion-title">{{#t "topic_title"}}Topic Title{{/t}}</label>
     <input type="text"
+           id="discussion-title"
            name="title"
            placeholder="{{#t "topic_title"}}Topic Title{{/t}}"
            value="{{title}}"
