--- a/app/views/gradebooks/grade_summary.html.erb
+++ b/app/views/gradebooks/grade_summary.html.erb
@@ -108,11 +108,11 @@
 <table style="width: 100%;" id="grades_summary" class="<%= 'editable' if editable %>">
   <thead>
     <tr>
-      <th><%= t('headers.name', "Name") %></th>
-      <th><%= t('headers.due', "Due") %></th>
-      <th><%= t('headers.score', "Score") %></th>
-      <th style="text-align: right; white-space: nowrap;"><%= t('headers.out_of', "Out of") %></th>
-      <th>&nbsp;</th>
+      <th scope="row"><%= t('headers.name', "Name") %></th>
+      <th scope="row"><%= t('headers.due', "Due") %></th>
+      <th scope="row"><%= t('headers.score', "Score") %></th>
+      <th scope="row" style="text-align: right; white-space: nowrap;"><%= t('headers.out_of', "Out of") %></th>
+      <th scope="row"></th>
     </tr>
   </thead>
 <% turnitin_enabled = @context.turnitin_enabled? && @assignments.any?(&:turnitin_enabled) %>
